# AndroidTools-qml

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .qmlls.ini  CMakeLists.txt  LICENSE  README.md  README.zh_CN.md
.cache/clangd/index/: Notification.cpp.88519FF4A00AE9F0.idx  Notification.h.4FFF912FC36DF279.idx  adbcontrol.cpp.4326E0D973FAEEA0.idx  adbcontrol.h.BF6A4E522DD6A77B.idx  adbinterface.cpp.D62EE04F334F92BD.idx  adbinterface.h.3F7F881E5D0236E0.idx  adbtools.cpp.24C7AB4B06B2D659.idx  adbtools.h.FF3D2AD7E426F5EE.idx  appDetailControl.cpp.44A86D1EBFEEBBBD.idx  appDetailControl.h.16AC257B5A89B60A.idx  appHelper.cpp.B04E1863FEC7F401.idx  appHelper.h.8B7DFC3C7E22E640.idx  appPagetool.cpp.D6AC7C8AC88DBEE9.idx  appPagetool.h.02A2FB02A3BB658A.idx  batteryControl.cpp.0350AF105CD3762D.idx  batteryControl.h.8F4C04DC19225DD7.idx  batterydisguise.cpp.7C2C4AB197A97517.idx  batterydisguise.h.347FE01947F7B4A1.idx  bingwallpaperhander.cpp.2FC2C4E38E33B721.idx  bingwallpaperhander.h.353AA8F940E16F56.idx  connectmanager.cpp.4218D26AE81B6F95.idx  connectmanager.h.48071A6FA574BC05.idx  constants.cpp.9F0C3739C4198F6E.idx  constants.h.AEC7843E06BB89B4.idx  controlPageTool.cpp.F0AB40A301496E10.idx  controlPageTool.h.92DD0981D6A94C7C.idx  cutactivitycontrol.cpp.EA43A8E4686A74DB.idx  cutactivitycontrol.h.B3691B4BE8015733.idx  deivicelistviewmodel.cpp.A27C783E3CACB9A6.idx  deivicelistviewmodel.h.D75E539347558869.idx  detailinfocontrol.cpp.1DF00DF5FC8B857C.idx  detailinfocontrol.h.EB6BCDE2FA5EFD43.idx  devicecontrol.cpp.B6A07077FA13C08E.idx  devicecontrol.h.2D066A9F0BC54065.idx  fastbootdevicemanager.cpp.82E4BCE0362E7D8F.idx  fastbootdevicemanager.h.41B9F383E0307282.idx  filetransfer.cpp.41B2403284D2E2F3.idx  filetransfer.h.B0899EB2D62F0036.idx  flashPageTool.cpp.52BDD102D0920865.idx  flashPageTool.h.5D03CEB6A5CD8FC1.idx  (+24 more)
.github/workflows/: build-deb.yml  compile-project.yml
debian/: changelog  control  rules
src/: main.cpp  main.qrc
src/MFloat/: mfloat.qrc
src/MFloat/Controls/: ColorConstants.qml  MButton.qml  MCheckBox.qml  MComboBox.qml  MFrame.qml  MLabel.qml  MLineEdit.qml  MLoadIndicator.qml  MNotificationBox.qml  MProgressBar.qml  MSlider.qml  MSwitchButton.qml  MWrapper.qml
src/cpp/AppPageTool/: AppPageTool.cpp  AppPageTool.h  CMakeLists.txt  appDetailControl.cpp  appDetailControl.h  softlistmodel.cpp  softlistmodel.h
src/cpp/TerminalPageTool/: terminalTools.cpp  terminalTools.h
src/cpp/adb/: CMakeLists.txt  adbdevice.cpp  adbdevice.h  adbdevice_apps.cpp  adbdevice_control.cpp  adbinterface.cpp  adbinterface.h  adblog.cpp  adblog.h  adbtools.cpp  adbtools.h  adbtypes.h  connectmanager.cpp  connectmanager.h  device.cpp  device.h  devicecommandexecutor.cpp  devicecommandexecutor.h  devicehelper.cpp  devicehelper.h  fastbootdevice.cpp  fastbootdevice.h
src/cpp/app/: CMakeLists.txt  appglobal.cpp  appglobal.h
src/cpp/appPageTool/: CMakeLists.txt  appDetailControl.cpp  appDetailControl.h  appHelper.cpp  appHelper.h  appPagetool.cpp  appPagetool.h  softlistmodel.cpp  softlistmodel.h
src/cpp/appPageTools/: CMakeLists.txt  appDetailControl.cpp  appDetailControl.h  appHelper.cpp  appHelper.h  appPagetool.cpp  appPagetool.h  softlistmodel.cpp
src/cpp/common/: CMakeLists.txt  basepagetool.cpp  basepagetool.h  pagetoolmanager.h
src/cpp/components/: CMakeLists.txt  SystemInfoProvider.cpp  SystemInfoProvider.h  deivicelistviewmodel.cpp  deivicelistviewmodel.h  fpsitem.cpp  fpsitem.h
src/cpp/controlPageTool/: CMakeLists.txt  batterydisguise.cpp  batterydisguise.h  controlPageTool.cpp  controlPageTool.h  devicecontrol.cpp  devicecontrol.h  filetransfer.cpp  filetransfer.h  resolutioncontrol.cpp  resolutioncontrol.h  startactivity.cpp  startactivity.h  textinput.cpp  textinput.h
src/cpp/flashPageTool/: fastbootdevicemanager.cpp  fastbootdevicemanager.h  flashPageTool.cpp  flashPageTool.h  flashUrlHandle.h  flashtools.cpp  flashtools.h
src/cpp/flashPageTools/: CMakeLists.txt  fastbootdevicemanager.cpp  fastbootdevicemanager.h  flashPageTool.cpp  flashtools.h  (+3 more)
src/cpp/imagePageTool/: CMakeLists.txt  imagePageTool.cpp  imagePageTool.h
src/cpp/imagePageTool/scrcpy/core/: CMakeLists.txt
src/cpp/imagePageTool/scrcpy/core/include/: QtScrcpyCore.h  QtScrcpyCoreDef.h  adbprocess.h
src/cpp/imagePageTool/scrcpy/core/src/adb/: adbprocessimpl.cpp
src/cpp/imagePageTool/scrcpy/core/src/device/: compat.h  device.cpp  device.h
src/cpp/imagePageTool/scrcpy/core/src/device/android/: input.h  keycodes.h
src/cpp/imagePageTool/scrcpy/core/src/device/controller/inputconvert/: controlmsg.h  inputconvertgame.cpp
src/cpp/imagePageTool/scrcpy/core/src/device/controller/receiver/: devicemsg.h
src/cpp/imagePageTool/scrcpy/core/src/device/decoder/: decoder.cpp  decoder.h
src/cpp/imagePageTool/scrcpy/core/src/device/demuxer/: demuxer.cpp  demuxer.h
src/cpp/imagePageTool/scrcpy/core/src/device/filehandler/: filehandler.h
src/cpp/imagePageTool/scrcpy/core/src/device/recorder/: recorder.cpp
src/cpp/imagePageTool/scrcpy/core/src/device/server/: server.cpp  server.h
src/cpp/imagePageTool/scrcpy/core/src/devicemanage/: devicemanage.cpp  devicemanage.h
src/cpp/imagePageTool/scrcpy/service/: ResourceService.cpp  ResourceService.h  ServiceManager.cpp  ServiceManager.h  WebSocketService.cpp  WebSocketService.h
src/cpp/imagePageTool/scrcpy/service/include/: server.h
src/cpp/imagePageTool/scrcpy/service/models/: Mirror.h
src/cpp/imagePageTool/scrcpy/service/udp/: Broadcast.cpp  Broadcast.h
src/cpp/imagePageTool/scrcpy/ui/main/: MainWindow.cpp  MainWindow.h
src/cpp/imagePageTool/scrcpy/ui/mirror/: MirrorRenderer.cpp  MirrorRenderer.h  MirrorScene.cpp  MirrorScene.h  imageframeitem.cpp  imageframeitem.h
src/cpp/imagePageTool/scrcpy/ui/scene/: Scene.cpp  Scene.h  SceneRenderer.cpp  SceneRenderer.h
src/cpp/imagePageTool/scrcpy/ui/sceneprovider/: SceneProvider.cpp  SceneProvider.h  SceneProviderRenderer.cpp  SceneProviderRenderer.h
src/cpp/imagePageTool/scrcpy/ui/util/: config.cpp  config.h
src/qml/: Main.qml  main.qml
src/qml2/: Main.qml
src/res/: androidtools-server
(+105 files in other folders)
